# python-design-patterns

./: .flake8  .gitignore  README.md  mypy.ini  pyproject.toml
creational/factory/: application.py
creational/factory/shipments/: air_shipment.py  land_shipment.py  shipment.py  water_shipment.py
creational/factory/test/: test_application.py
creational/factory/transport/: airplane.py  ship.py  truck.py
patterns/behavioral/command/: application.py  button.py  editor.py
patterns/behavioral/iterator/: facebook.py  profile.py  social_network.py
patterns/behavioral/mediator/: auth_dialog.py  mediator.py
patterns/behavioral/memento/: command.py  editor.py  snapshot.py
patterns/creational/abstract_factory/: application.py  application_configurator.py
patterns/creational/builder/: main.py
patterns/creational/factory/: application.py
patterns/creational/prototype/: main.py
patterns/creational/singleton/: singleton.py
patterns/structural/adapter/: round_hole.py
patterns/structural/composite/: circle.py  compound_graphic.py  dot.py  graphic.py
patterns/structural/facade/: complex_subsystems.py  video_converter.py
patterns/structural/flyweight/: forest.py  tree.py  tree_factory.py  tree_type.py
patterns/structural/proxy/: cached_youtube_class.py  third_party_youtube_class.py  third_party_youtube_lib.py  youtube_manager.py
test/behavioral/chain_of_responsability/: test_ui.py
test/behavioral/command/: test_commands.py
test/behavioral/iterator/: test_facebook_iterator.py
test/behavioral/mediator/: test_mediator.py
(+74 files in other folders)
