[tool.poetry]
name = "python-design-patters"
version = "0.1.0"
description = "design patterns written in python"
authors = ["Tales Padua <tales.padua@loft.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
